# controle-contas

./: .flake8  .gitignore  Dockerfile  Makefile  Pipfile  Procfile  README.md  compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  settings.toml  setup.py
.github/workflows/: controle-contas.yml  docker-image.yml
contrib/: .env-sample
controle_contas/: app.py  controle_contas.db
controle_contas/auth/: views.py
controle_contas/ext/: babel.py  cli.py  config.py  jwt.py  login.py
controle_contas/ext/admin/: __init__.py  admin.py  forms.py  model_view.py
controle_contas/ext/api/: views.py  views_entries.py  views_sources.py  views_users.py
controle_contas/ext/auth/: commands.py  models.py  views.py
controle_contas/ext/db/: __init__.py  commands.py  models.py
controle_contas/ext/serializer/: models.py
controle_contas/ext/site/: forms.py  views.py
controle_contas/static/css/: styles.css
controle_contas/static/js/: scripts.js
controle_contas/templates/: base.html  dashboard.html  entries.html  footer.html  home.html  login.html  register.html  sources.html
controle_contas/templates/admin/: index.html
controle_contas/templates/entries/: entries.html  form_entries.html  (+1 more)
migrations/versions/: 014eaa2e97dd_.py  0793b05f6324_.py  53805ad29559_.py  668287e53ae9_.py  834dfa468076_.py  8536c7358098_.py  9bf983604b82_.py  a19294702054_.py  ba2456b778ca_.py  bee258ea7178_.py  c02b85b7c8af_.py  dbb2e7cfd6e5_.py
tests/: conftest.py  test_api.py  test_api_entry.py  test_api_sources.py  test_api_users.py  test_app.py  test_auth.py
(+8 files in other folders)
