[tool.poetry]
name = "controle-contas"
version = "0.1.0"
description = "app para controle de contas domesticas"
authors = ["Haddly Trindade <haddleytrindade@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.26.1"
Flask-Admin = "^1.5.8"
Flask-BabelEx = "^0.9.4"
Flask-Login = "^0.5.0"
email-validator = "^1.1.3"
dynaconf = "^3.1.7"
python-dotenv = "^0.19.1"
Flask-JWT-Extended = "^4.3.1"
psycopg2-binary = "^2.9.1"
gunicorn = "^20.1.0"
Flask-WTF = "^0.15.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest-flask = "^1.2.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
pytest = "^6.2.5"
requests = "^2.26.0"
ipdb = "^0.13.9"
pylama = "^7.7.1"
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
